 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.hw1.devlyn.thewateringhole1.FragmentRegister"
        android:background="@android:color/transparent">


     <TextView android:text="@string/Registration" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="35sp"
         android:id="@+id/textView2"
         android:textColor="#d9282e"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />

     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:id="@+id/Username"
         android:hint="@string/Username"
         android:textColor="#d9282e"
         android:textColorHint="#d9282e"
         android:background="@drawable/wateringhole_textfield_activated_holo_dark"
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="113dp" />

     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/NewPassword"
         android:hint="@string/new_password"
         android:layout_below="@+id/Username"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#d9282e"
         android:textColorHint="#d9282e"
         android:background="@drawable/wateringhole_textfield_activated_holo_dark" />

     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/RepeatPassword"
         android:hint="@string/repeat_password"
         android:layout_below="@+id/NewPassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#d9282e"
         android:textColorHint="#d9282e"
         android:background="@drawable/wateringhole_textfield_activated_holo_dark" />

     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/Email"
         android:hint="@string/Email"
         android:layout_below="@+id/RepeatPassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#d9282e"
         android:textColorHint="#d9282e"
         android:background="@drawable/wateringhole_textfield_activated_holo_dark" />

     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:id="@+id/register_button"
         android:background="@drawable/button"
         android:textColor="#96160b"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:focusable="false"
         android:enabled="true" />

 </RelativeLayout>
