<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hw1.devlyn.thewateringhole.UserProfileActivity">


    <TextView
        android:text="@string/user_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_vertical"
        android:hint="username"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/save_btn"
        android:layout_gravity="bottom"
        android:background="@drawable/button"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="49dp"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Load"
        android:id="@+id/load_btn"
        android:background="@drawable/button"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignLeft="@+id/save_btn"
        android:layout_alignStart="@+id/save_btn"
        android:layout_below="@+id/save_btn"/>


</RelativeLayout>
