<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.hw1.devlyn.thewateringhole.FragmentEditProfileActivity"
        android:background="#ffbd32ff">

        <TextView android:text="@string/edit_profile_title" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:id="@+id/textView9"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/save_btn"

            android:text="Save"
            android:textColor="#FEFFFA"
            android:textSize="30sp"

            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Description"
            android:hint="@string/Description"
            android:background="@drawable/wateringhole_textfield_activated_holo_dark"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Likes_Dislikes"
            android:hint="@string/Likes_Dislikes"
            android:background="@drawable/wateringhole_textfield_activated_holo_dark"
            android:layout_below="@+id/Username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Upload_Image"
        android:id="@+id/uploadImage"
        android:background="@drawable/login_button"
        android:textColor="#FEFFFA"
        android:textSize="20sp"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_above="@+id/save_btn"
        android:layout_alignLeft="@+id/save_btn"
        android:layout_alignStart="@+id/save_btn"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/Likes_Dislikes"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Username"
        android:hint="Username"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/wateringhole_textfield_activated_holo_dark"/>

</RelativeLayout>

